--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "@roots/bud": "5.8.7",
     "@roots/bud-tailwindcss": "5.8.7",
     "@roots/sage": "5.8.7"
+  },
+  "dependencies": {
+    "aos": "^2.3.4"
   }
 }
